Init kafka broker and restruct source code
