# internal/api-gateway/handlers/property_listing.go
@@ -1,24 +1,45 @@
 package handlers
 
 import (
-	proto "homify-go-grpc/api/property-listing"
+	"context"
+	proto "homify-go-grpc/api/property"
 
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
 )
 
-type PropertyListingHandler struct {
-	grpcClient proto.PropertyListingClient
+type PropertyHandler struct {
+	grpcClient proto.PropertyClient
 	validator  *validator.Validate
 }
 
-func NewPropertyListingHandler(c proto.PropertyListingClient, validate *validator.Validate) *PropertyListingHandler {
-	return &PropertyListingHandler{
+func NewPropertyHandler(c proto.PropertyClient, validate *validator.Validate) *PropertyHandler {
+	return &PropertyHandler{
 		grpcClient: c,
 		validator:  validate,
 	}
 }
 
-func (h *PropertyListingHandler) AddNewProperty(ctx *gin.Context) {
+// @Summary Add a new property
+// @Tags Property
+// @Description Add a new property to the property listings.
+// @ID add-new-property
+// @Accept  json
+// @Produce  json
+// @Security Authorization
+// @Param input body dtos.NewPropertyDTO true "New Property object to be added"
+// @Success 200 {object} interface{} "Successfully added the new property"
+// @Router /property [post]
+func (h *PropertyHandler) AddNewProperty(ctx *gin.Context) {
+	propertyCtx := context.Background()
 
+	newProperty := &proto.NewProperty{
+		Title: "Hi there !",
+	}
+
+	h.grpcClient.AddProperty(propertyCtx, newProperty)
+
+	ctx.JSON(200, gin.H{
+		"Success": true,
+	})
 }
