# internal/property-service/server/server.go
@@ -3,26 +3,27 @@ package server
 import (
 	"context"
 	"fmt"
-	proto "homify-go-grpc/api/property-listing"
-	"homify-go-grpc/internal/property-listing-service/models"
-	"homify-go-grpc/internal/property-listing-service/services"
+	proto "homify-go-grpc/api/property"
+	"homify-go-grpc/internal/property-service/models"
+	"homify-go-grpc/internal/property-service/producers"
+	"homify-go-grpc/internal/property-service/services"
 
 	"gorm.io/gorm"
 )
 
-type GRPCPropertyListingServer struct {
+type GRPCPropertyServer struct {
 	amenitySvc  services.IAmenityService
 	categorySvc services.ICategoryService
-	propertySvc services.IPropertyListingService
-	proto.UnimplementedPropertyListingServer
+	propertySvc services.IPropertyService
+	proto.UnimplementedPropertyServer
 }
 
-func NewGRPCPropertyListingServer(db *gorm.DB) *GRPCPropertyListingServer {
+func NewGRPCPropertyServer(db *gorm.DB, p producers.IPropertyProducer) *GRPCPropertyServer {
 	amenitySvc := services.NewAmenityService(db)
 	categorySvc := services.NewCategoryService(db)
-	propertySvc := services.NewPropertyListingService(db)
+	propertySvc := services.NewPropertyService(db, p)
 
-	return &GRPCPropertyListingServer{
+	return &GRPCPropertyServer{
 		amenitySvc:  amenitySvc,
 		categorySvc: categorySvc,
 		propertySvc: propertySvc,
@@ -36,13 +37,13 @@ const (
 
 // Property handlers
 
-func (s *GRPCPropertyListingServer) AddProperty(ctx context.Context, req *proto.NewProperty) (*proto.ResultResponse, error) {
+func (s *GRPCPropertyServer) AddProperty(ctx context.Context, req *proto.NewProperty) (*proto.ResultResponse, error) {
 	return &proto.ResultResponse{Success: true}, nil
 }
 
 // Assets handlers
 
-func (s *GRPCPropertyListingServer) GetAssets(ctx context.Context, req *proto.GetAssetsRequest) (*proto.GetAssetsResponse, error) {
+func (s *GRPCPropertyServer) GetAssets(ctx context.Context, req *proto.GetAssetsRequest) (*proto.GetAssetsResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
 		assets, err := s.categorySvc.GetCategories()
 
@@ -94,7 +95,7 @@ func (s *GRPCPropertyListingServer) GetAssets(ctx context.Context, req *proto.Ge
 	return &proto.GetAssetsResponse{}, nil
 }
 
-func (s *GRPCPropertyListingServer) AddAsset(ctx context.Context, req *proto.AddAssetRequest) (*proto.ResultResponse, error) {
+func (s *GRPCPropertyServer) AddAsset(ctx context.Context, req *proto.AddAssetRequest) (*proto.ResultResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
 		err := s.categorySvc.CreateCategory(&models.Category{
 			Name:    req.Name,
@@ -124,7 +125,7 @@ func (s *GRPCPropertyListingServer) AddAsset(ctx context.Context, req *proto.Add
 	return &proto.ResultResponse{Success: false}, fmt.Errorf("invalid asset type")
 }
 
-func (s *GRPCPropertyListingServer) ModifyAsset(ctx context.Context, req *proto.ModifyAssetRequest) (*proto.ResultResponse, error) {
+func (s *GRPCPropertyServer) ModifyAsset(ctx context.Context, req *proto.ModifyAssetRequest) (*proto.ResultResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
 		err := s.categorySvc.UpdateCategory(
 			uint(req.Id),
@@ -160,7 +161,7 @@ func (s *GRPCPropertyListingServer) ModifyAsset(ctx context.Context, req *proto.
 	return &proto.ResultResponse{Success: false}, fmt.Errorf("invalid asset type")
 }
 
-func (s *GRPCPropertyListingServer) DisableAsset(ctx context.Context, req *proto.DisableAssetRequest) (*proto.ResultResponse, error) {
+func (s *GRPCPropertyServer) DisableAsset(ctx context.Context, req *proto.DisableAssetRequest) (*proto.ResultResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
 		err := s.categorySvc.DisableCategory(uint(req.Id))
 
